force-app/main/default/objects/Matriz_Asignacion__mdt/Matriz_Asignacion__mdt.object-meta.xml
<CustomObject>
    <label>Matriz de Asignacion</label>
    <pluralLabel>Matrices de Asignacion</pluralLabel>
</CustomObject>