force-app/main/default/objects/Matriz_Asignacion__mdt/fields/Contador_RoundRobin__c.field-meta.xml
<CustomField>
    <fullName>Contador_RoundRobin__c</fullName>
    <label>Contador Round Robin</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>