force-app/main/default/objects/Matriz_Asignacion__mdt/fields/Estado_MX__c.field-meta.xml
<CustomField>
    <fullName>Estado_MX__c</fullName>
    <label>Estado MX</label>
    <length>40</length>
    <type>Text</type>
</CustomField>