force-app/main/default/objects/Matriz_Asignacion__mdt/fields/Ramo__c.field-meta.xml
<CustomField>
    <fullName>Ramo__c</fullName>
    <label>Ramo</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>