force-app/main/default/objects/Matriz_Asignacion__mdt/fields/Vendedores_Usernames__c.field-meta.xml
<CustomField>
    <fullName>Vendedores_Usernames__c</fullName>
    <description>Lista de usernames separados por coma para round-robin.</description>
    <label>Usernames vendedores</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>